--- a/UniHub/app/src/main/res/values/strings.xml
+++ b/UniHub/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">UniHub</string>
+    <string name="titulo_disciplinas">Disciplinas</string>
+    <string name="hint_busca">Buscar disciplina...</string>
+    <string name="botao_adicionar">Adicionar disciplina</string>
+    <string name="semestre_atual">Semestre - 2025/1</string>
+    <string name="semestres_anteriores">Semestres anteriores</string>
+    <string name="exemplo_titulo_disciplina">DS436 Disciplina 1</string>
+    <string name="exemplo_info_disciplina">Terça-feira - Sala A13\n19:00 - 22:00</string>
+    <string name="compartilhar">Compartilhar</string>
+
 </resources>
