Login google funcionante

--- a/UniHub/app/src/main/res/values/strings.xml
+++ b/UniHub/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">UniHub</string>
-    <string name="server_client_id">YOUR_WEB_CLIENT_ID.apps.googleusercontent.com</string>
+    <string name="server_client_id">314323090083-t8vq1e591n8tcrcmu53f0b8ieb39piqt.apps.googleusercontent.com</string>
 </resources>
