--- a/UniHub/app/src/main/res/values/strings.xml
+++ b/UniHub/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">UniHub</string>
     <string name="server_client_id">314323090083-t8vq1e591n8tcrcmu53f0b8ieb39piqt.apps.googleusercontent.com</string>
+    <string name="attendance_channel_name">Lembretes de presença</string>
+    <string name="attendance_channel_description">Notificações para registrar presença ou ausência nas aulas.</string>
 </resources>
