--- a/UniHub/app/src/main/res/values/strings.xml
+++ b/UniHub/app/src/main/res/values/strings.xml
@@ -19,5 +19,13 @@
     <string name="evaluation_notification_default_title">Avaliação</string>
     <string name="evaluation_notification_button_details">Ver detalhes</string>
     <string name="evaluation_notification_label">AVALIAÇÃO</string>
-
+    <string name="task_channel_name">Lembretes de tarefas</string>
+    <string name="task_channel_description">Notificações para tarefas agendadas.</string>
+    <string name="task_notification_prompt">Confira os detalhes da tarefa.</string>
+    <string name="task_notification_schedule_format">Marcada para %1$s.</string>
+    <string name="task_notification_schedule_unknown">Data e horário não informados</string>
+    <string name="task_notification_discipline_format">Disciplina: %1$s</string>
+    <string name="task_notification_default_title">Tarefa</string>
+    <string name="task_notification_button_details">Ver detalhes</string>
+    <string name="task_notification_label">TAREFA</string>
 </resources>
