--- a/UniHub/app/src/main/res/values/strings.xml
+++ b/UniHub/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="task_notification_prompt">Confira os detalhes da tarefa.</string>
     <string name="task_notification_schedule_format">Marcada para %1$s.</string>
     <string name="task_notification_schedule_unknown">Data e horário não informados</string>
-    <string name="task_notification_discipline_format">Disciplina: %1$s</string>
+    <string name="task_notification_board_format">Quadro: %1$s</string>
     <string name="task_notification_default_title">Tarefa</string>
     <string name="task_notification_button_details">Ver detalhes</string>
     <string name="task_notification_label">TAREFA</string>
