--- a/UniHub/app/src/main/res/values/strings.xml
+++ b/UniHub/app/src/main/res/values/strings.xml
@@ -57,4 +57,7 @@
     <string name="contact_notification_history_accept">Solicitação de contato aceita.</string>
     <string name="contact_notification_history_reject">Solicitação de contato rejeitada.</string>
     <string name="contact_notification_action_error">Não foi possível processar a solicitação de contato.</string>
+    <string name="instituicao_obrigatoria_message">Instituição deve ser informada para o funcionamento correto do app</string>
+
+
 </resources>
