--- a/UniHub/app/src/main/res/values/strings.xml
+++ b/UniHub/app/src/main/res/values/strings.xml
@@ -1,36 +1,36 @@
 <resources>
     <string name="app_name">UniHub</string>
     <string name="server_client_id">314323090083-t8vq1e591n8tcrcmu53f0b8ieb39piqt.apps.googleusercontent.com</string>
-    <string name="attendance_channel_name">Lembretes de presença</string>
-    <string name="attendance_channel_description">Notificações para registrar presença ou ausência nas aulas.</string>
-    <string name="attendance_notification_prompt">Registre sua presença ou ausência.</string>
-    <string name="attendance_notification_schedule_format">%1$s às %2$s</string>
-    <string name="attendance_notification_time_only_format">Horário: %1$s</string>
-    <string name="attendance_notification_schedule_unknown">Horário não informado</string>
-    <string name="attendance_notification_absence_with_limit">Faltas: %1$d de %2$d permitidas.</string>
-    <string name="attendance_notification_absence_without_limit">Faltas registradas: %1$d.</string>
-    <string name="attendance_notification_absence_only_limit">Máximo permitido: %1$d faltas.</string>
-    <string name="attendance_notification_history_title">Presença</string>
-    <string name="attendance_notification_history_presence">Presença registrada em %1$s.</string>
-    <string name="attendance_notification_history_absence">Ausência registrada em %1$s.</string>
-    <string name="evaluation_channel_name">Lembretes de avaliações</string>
-    <string name="evaluation_channel_description">Notificações para avaliações agendadas.</string>
-    <string name="evaluation_notification_prompt">Confira os detalhes da avaliação.</string>
-    <string name="evaluation_notification_schedule_format">Marcada para %1$s.</string>
-    <string name="evaluation_notification_schedule_unknown">Data e horário não informados</string>
-    <string name="evaluation_notification_discipline_format">Disciplina: %1$s</string>
-    <string name="evaluation_notification_default_title">Avaliação</string>
-    <string name="evaluation_notification_button_details">Ver detalhes</string>
-    <string name="evaluation_notification_label">AVALIAÇÃO</string>
-    <string name="task_channel_name">Lembretes de tarefas</string>
-    <string name="task_channel_description">Notificações para tarefas agendadas.</string>
-    <string name="task_notification_prompt">Confira os detalhes da tarefa.</string>
-    <string name="task_notification_schedule_format">Marcada para %1$s.</string>
-    <string name="task_notification_schedule_unknown">Data e horário não informados</string>
-    <string name="task_notification_board_format">Quadro: %1$s</string>
-    <string name="task_notification_default_title">Tarefa</string>
-    <string name="task_notification_button_details">Ver detalhes</string>
-    <string name="task_notification_label">TAREFA</string>
+    <string name="frequencia_channel_name">Lembretes de presença</string>
+    <string name="frequencia_channel_description">Notificações para registrar presença ou ausência nas aulas.</string>
+    <string name="frequencia_notification_prompt">Registre sua presença ou ausência.</string>
+    <string name="frequencia_notification_schedule_format">%1$s às %2$s</string>
+    <string name="frequencia_notification_time_only_format">Horário: %1$s</string>
+    <string name="frequencia_notification_schedule_unknown">Horário não informado</string>
+    <string name="frequencia_notification_absence_with_limit">Faltas: %1$d de %2$d permitidas.</string>
+    <string name="frequencia_notification_absence_without_limit">Faltas registradas: %1$d.</string>
+    <string name="frequencia_notification_absence_only_limit">Máximo permitido: %1$d faltas.</string>
+    <string name="frequencia_notification_history_title">Presença</string>
+    <string name="frequencia_notification_history_presence">Presença registrada em %1$s.</string>
+    <string name="frequencia_notification_history_absence">Ausência registrada em %1$s.</string>
+    <string name="avaliacao_channel_name">Lembretes de avaliações</string>
+    <string name="avaliacao_channel_description">Notificações para avaliações agendadas.</string>
+    <string name="avaliacao_notification_prompt">Confira os detalhes da avaliação.</string>
+    <string name="avaliacao_notification_schedule_format">Marcada para %1$s.</string>
+    <string name="avaliacao_notification_schedule_unknown">Data e horário não informados</string>
+    <string name="avaliacao_notification_discipline_format">Disciplina: %1$s</string>
+    <string name="avaliacao_notification_default_title">Avaliação</string>
+    <string name="avaliacao_notification_button_details">Ver detalhes</string>
+    <string name="avaliacao_notification_label">AVALIAÇÃO</string>
+    <string name="tarefa_channel_name">Lembretes de tarefas</string>
+    <string name="tarefa_channel_description">Notificações para tarefas agendadas.</string>
+    <string name="tarefa_notification_prompt">Confira os detalhes da tarefa.</string>
+    <string name="tarefa_notification_schedule_format">Marcada para %1$s.</string>
+    <string name="tarefa_notification_schedule_unknown">Data e horário não informados</string>
+    <string name="tarefa_notification_board_format">Quadro: %1$s</string>
+    <string name="tarefa_notification_default_title">Tarefa</string>
+    <string name="tarefa_notification_button_details">Ver detalhes</string>
+    <string name="tarefa_notification_label">TAREFA</string>
     <string name="share_notification_invite_channel_name">Convites de compartilhamento</string>
     <string name="share_notification_invite_channel_description">Notificações para aceitar ou recusar convites de disciplinas compartilhadas.</string>
     <string name="share_notification_response_channel_name">Atualizações de compartilhamento</string>
