--- a/UniHub/app/src/main/res/values/strings.xml
+++ b/UniHub/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="share_notification_history_reject_detail">Você recusou o compartilhamento da disciplina %1$s enviado por %2$s.</string>
     <string name="share_notification_history_unknown_sender">um contato</string>
     <string name="share_notification_history_unknown_discipline">sua disciplina</string>
-    <string name="share_notification_action_session_expired">Sessão expirada. Faça login novamente para responder convites.</string>
+    <string name="share_notification_action_session_expired">Sessão expirada. Faça login novamente.</string>
     <string name="share_notification_action_error">Não foi possível atualizar o convite. Tente novamente.</string>
     <string name="notification_history_default_title">Notificação</string>
     <string name="notification_history_load_error">Não foi possível carregar o histórico de notificações.</string>
